[package]
name = "wp_goji_patch"
version = "0.2.8"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Rust interface for Jira"
documentation = "http://softprops.github.io/goji"
homepage = "https://github.com/softprops/goji"
repository = "https://github.com/softprops/goji"
keywords = ["hyper", "jira"]
license = "MIT"
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "softprops/goji" }
maintenance = { status = "actively-developed" }

[dev-dependencies]
env_logger = "0.4"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.5"
reqwest = { version = "0.10", default-features = false, features = ['blocking'] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "2.1"

[features]
default = []
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
rustls-tls = ["reqwest/rustls-tls"]